--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
             <img class="img-fluid circular-img" src="pictures/picture1.png">
           </div>
           <div class="col-3">
-            <h4 class="nama">Shabiqa Amani</h4>
-            <p class="role">Front end designer</p>
-            <button type="button" class="btn btn-primary btn-kontak">Kontak</button>
+            <h4 class="nama" id="namaku">Shabiqa Amani</h4>
+            <p class="role" id="roleku">Front end designer</p>
+            <button type="button" class="btn btn-primary btn-kontak" onclick="editForm();tampilkanData();">Edit</button>
             <button type="button" class="btn btn-outline-success">Resume</button>
           </div>
           <div class="col-3 divider-left">
@@ -55,50 +55,50 @@
             <p class="bold-text">Email</p>
           </div>
           <div class="col-3 justify-content-left">
-            <p>Full time</p>
-            <p>20</p>
-            <p>Depok, Indonesia</p>
-            <p>2</p>
-            <p>Shabiqaamani@gmail.com</p>
+            <p id="availabilityku">Full time</p>
+            <p id="umurku">20</p>
+            <p id="lokasiku">Depok, Indonesia</p>
+            <p id="pengalamanku">2</p>
+            <p id="emailku">Shabiqaamani@gmail.com</p>
           </div>
         </div>
       </div>
 
-      <div class="container divide">
+      <div class="container divide" id="formEdit">
         <div class="row">
           <div class="col">
             <form>
               <div class="form-group">
                 <label for="nama">Nama</label>
-                <input type="text" class="form-control" placeholder="Masukkan nama anda">
+                <input type="text" class="form-control" name="nama" id="namaku2">
               </div>
               <div class="form-group">
                 <label for="role">Role</label>
-                <input type="text" class="form-control" placeholder="Masukkan role anda">
+                <input type="text" class="form-control" name="role" id="myRole">
               </div>
               <div class="form-group">
                 <label for="availability">Availability</label>
-                <input type="text" class="form-control" placeholder="Masukkan availability anda">
+                <input type="text" class="form-control" name="availability" id="myAvailability">
               </div>
               <div class="form-group">
                 <label for="age">Age</label>
-                <input type="number" class="form-control" placeholder="Masukkan umur anda">
+                <input type="number" class="form-control" name="umur" id="myAge">
               </div>
               <div class="form-group">
                 <label for="lokasi">Lokasi</label>
-                <input type="text" class="form-control" placeholder="Masukkan lokasi anda">
+                <input type="text" class="form-control" name="lokasi" id="myLocation">
               </div>
               <div class="form-group">
                 <label for="years">Years Experience</label>
-                <input type="number" class="form-control" placeholder="Masukkan berapa tahun pengalaman anda">
+                <input type="number" class="form-control" name="experience" id="myExperience">
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
-                <input type="e-mail" class="form-control" placeholder="Masukkan email anda">
+                <input type="e-mail" class="form-control" name="email" id="myEmail">
               </div>
             </form>
 
-            <button type="submit" class="btn btn-sm btn-success btn-width-100">SUBMIT</button>
+            <button type="submit" class="btn btn-sm btn-success btn-width-100" onclick="simpanForm()">SUBMIT</button>
             
           </div>
         </div>
@@ -106,6 +106,7 @@
 
        
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+      <script src="js/portfolio.js"></script>
 
     </body>
 </html>
